[gd_scene load_steps=44 format=2]

[ext_resource path="res://LevelsMainMenu/MainMenu/Buttons/PlayButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelsMainMenu/MainMenu/TitleAnim/Title.gd" type="Script" id=2]
[ext_resource path="res://LevelsMainMenu/MainMenu/TitleAnim/MenuTitleAnim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://LevelsMainMenu/MainMenu/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelsMainMenu/MainMenu/MainMenuScript.gd" type="Script" id=5]
[ext_resource path="res://LevelsMainMenu/MainMenu/Buttons/BackButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boldness.otf" type="DynamicFontData" id=7]
[ext_resource path="res://LevelsMainMenu/MainMenu/SliderColor.tres" type="StyleBox" id=8]
[ext_resource path="res://LevelsMainMenu/MainMenu/OptionMenuScript.gd" type="Script" id=9]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0030.png" type="Texture" id=10]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0023.png" type="Texture" id=11]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0029.png" type="Texture" id=12]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0026.png" type="Texture" id=13]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0024.png" type="Texture" id=14]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0028.png" type="Texture" id=15]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0025.png" type="Texture" id=16]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0027.png" type="Texture" id=17]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0001.png" type="Texture" id=18]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0002.png" type="Texture" id=19]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0003.png" type="Texture" id=20]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0006.png" type="Texture" id=21]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0007.png" type="Texture" id=22]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0004.png" type="Texture" id=23]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0005.png" type="Texture" id=24]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0008.png" type="Texture" id=25]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0009.png" type="Texture" id=26]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0010.png" type="Texture" id=27]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0011.png" type="Texture" id=28]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0012.png" type="Texture" id=29]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0013.png" type="Texture" id=30]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0014.png" type="Texture" id=31]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0015.png" type="Texture" id=32]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0016.png" type="Texture" id=33]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0021.png" type="Texture" id=34]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0020.png" type="Texture" id=35]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0022.png" type="Texture" id=36]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0019.png" type="Texture" id=37]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0017.png" type="Texture" id=38]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0018.png" type="Texture" id=39]
[ext_resource path="res://LevelsMainMenu/Design/Background2.png" type="Texture" id=40]

[sub_resource type="StyleBoxLine" id=1]
content_margin_top = 0.0
color = Color( 1, 0.984314, 0, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="DynamicFont" id=2]
size = 50
extra_spacing_top = 11
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "Active",
"speed": 24.0
} ]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 160.0
margin_bottom = 120.0
rect_scale = Vector2( 0.833421, 0.833421 )
stretch_mode = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Title"]
one_shot = true
autostart = true

[node name="TitleAnim" type="AnimatedSprite" parent="Title"]
position = Vector2( 480, 86.7004 )
frames = ExtResource( 3 )
animation = "TitleAnim"

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="MainMenu" instance=ExtResource( 1 )]
margin_left = 350.227
margin_top = 199.0
margin_right = 430.227
margin_bottom = 289.0

[node name="OptionsButton" parent="MainMenu" instance=ExtResource( 4 )]
margin_left = 350.227
margin_top = 351.563
margin_right = 430.227
margin_bottom = 441.563

[node name="OptionMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="OptionMenu" instance=ExtResource( 6 )]
margin_left = 350.227
margin_top = 352.384
margin_right = 430.227
margin_bottom = 442.384

[node name="VolumeSlider" type="HSlider" parent="OptionMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 259.0
margin_top = 296.0
margin_right = -259.0
margin_bottom = -268.0
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = ExtResource( 8 )
custom_styles/grabber_area = ExtResource( 8 )
max_value = 80.0
step = 10.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumePercent" type="Label" parent="OptionMenu/VolumeSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 106.0
margin_top = -67.4746
margin_right = -119.0
margin_bottom = -21.4746
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransition" type="Timer" parent="."]
wait_time = 1.6

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Active"
centered = false
[connection signal="timeout" from="Title/Timer" to="Title" method="_on_Timer_timeout"]
[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="OptionMenu/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="OptionMenu/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="timeout" from="ScreenTransition" to="." method="_on_ScreenTransition_timeout"]
